第七个版本
新闻的每个Fragment添加下拉刷新和上拉加载以及添加了MainActivity的返回按钮的退出程序的逻辑

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
     compileSdkVersion 26
@@ -69,4 +70,6 @@ dependencies {
     //SMS
     compile name: 'SMSSDK-3.0.0', ext: 'aar'
     compile name: 'SMSSDKGUI-3.0.0', ext: 'aar'
+    //greendao
+    compile 'org.litepal.android:core:1.6.0'
 }
